Fix tabs and add overflow-y to messages on show room

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -37,3 +37,9 @@
   padding: 0;
   margin: 0;
 }
+
+.ordered-list {
+  list-style-position: inside;
+  padding: 0;
+  margin: 0;
+}
