--- a/app/assets/stylesheets/molecules/_yt-player.scss
+++ b/app/assets/stylesheets/molecules/_yt-player.scss
@@ -15,10 +15,6 @@
     justify-content: space-between;
     flex-wrap: wrap;
   }
-
-  .change-url {
-    max-width: 100%;
-  }
 }
 
 /* Time and volume bars */
